# fabric_api_mcp

./: .gitignore  Dockerfile  README.md  Usage.md  docker-compose.yml  env.template  install.sh  pyproject.toml  requirements.txt
fabric_api_mcp/: __init__.py  __main__.py  config.py  metrics.py  resources_cache.py  system.md
fabric_api_mcp/auth/: __init__.py  token.py
fabric_api_mcp/dependencies/: __init__.py  fablib_factory.py  fabric_manager.py
fabric_api_mcp/errors/: __init__.py  handlers.py
fabric_api_mcp/log_helper/: __init__.py  config.py  decorators.py  formatters.py
fabric_api_mcp/middleware/: __init__.py  access_log.py  metrics.py  rate_limit.py  security_metrics.py
fabric_api_mcp/models/: __init__.py  inputs.py
fabric_api_mcp/tools/: __init__.py  projects.py  topology.py
fabric_api_mcp/tools/slices/: __init__.py  create.py  inspect.py  lifecycle.py  listing.py  modify.py  network.py
fabric_api_mcp/utils/: __init__.py  async_helpers.py  data_helpers.py
monitoring/grafana/dashboards/: fabric-mcp.json
monitoring/prometheus/: prometheus.yml
nginx/: Dockerfile  default.conf  nginx.conf
scripts/: fabric-api-local.sh  fabric-api.sh
server/: Dockerfile  __main__.py  config.py  requirements.txt  server.py  system.md
server/auth/: token.py
server/dependencies/: __init__.py  fablib_factory.py  fabric_manager.py
server/log_helper/: __init__.py  config.py  decorators.py
server/models/: inputs.py
server/tools/: projects.py  topology.py
server/utils/: data_helpers.py
vouch/: config  config_template
vscode/: README.md  mcp.json
(+10 files in other folders)
